--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,19 @@
   color: #61dafb;
 }
 
+.pro-sidebar {
+  background-color: #222 !important;
+}
+
+.pro-menu-item {
+  font-size: 1.2em;
+  color: #fff !important;
+}
+
+.pro-menu-item:hover {
+  background-color: #444 !important;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
