--- a/src/sections/About/About.css
+++ b/src/sections/About/About.css
@@ -6,14 +6,14 @@
   
   .about-heading {
     font-size: 2em;
-    color: #333;
+    color: var(--text-color);
     text-align: center;
     margin-bottom: 20px;
   }
   
   .about-text {
     font-size: 1.1em;
-    color: #555;
+    color: var(--text-color);
     line-height: 1.6;
   }
   
