--- a/src/sections/Experience/Experience.css
+++ b/src/sections/Experience/Experience.css
@@ -6,7 +6,7 @@
   
   .experience-heading {
     font-size: 2em;
-    color: #333;
+    color: var(--text-color);
     text-align: center;
     margin-bottom: 30px;
   }
@@ -19,19 +19,19 @@
   
   .experience-company {
     font-size: 1.5em;
-    color: #222;
+    color: var(--text-color);
     margin-bottom: 5px;
   }
   
   .experience-position {
     font-size: 1.1em;
-    color: #777;
+    color: var(--text-color);
     margin-bottom: 15px;
   }
   
   .experience-list {
     font-size: 1em;
-    color: #555;
+    color: var(--text-color);
     line-height: 1.6;
     padding-left: 20px;
   }
