--- a/src/sections/Home/Home.css
+++ b/src/sections/Home/Home.css
@@ -13,13 +13,13 @@
   
   .home-heading {
     font-size: 2.5em;
-    color: #333;
+    color: var(--text-color);
     margin-bottom: 10px;
   }
   
   .home-subheading {
     font-size: 1.2em;
-    color: #555;
+    color: var(--text-color);
     max-width: 600px;
     margin: 0 auto;
   }
